# esp32_zephyr

app/: CMakeLists.txt  prj.conf  set-env
app/boards/: esp32_devkitc_wroom_procpu.overlay
app/drivers/: tcrt5000.c
app/include/: tcrt5000.h
app/src/: main.c
app/src/components/: CMakeLists.txt
app/src/components/bsp/: CMakeLists.txt  bsp_gpio.c  bsp_gpio.h
app/src/components/line_sensor/: CMakeLists.txt  tcrt5000.c  tcrt5000.h
dts/: esp32_devkitc_wroom_procpu.dts
